--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,13 @@
 </main>
 
 <footer>
-  <!-- Step 4 - Add a dynamic year to the footer using JS. -->
-  <p>Copyright © 200X</p>
+
+
+  <p>Copyright © <%= locals.year %></p>
+  
+
+
+
 </footer>
 </body>
 
